# virtxml-

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  virtxml_autogen_assist.cpp
docs/: API-documentation.md  Errors.md  Flags.md  Home.md
include/virtxml/: basic.hpp  capabilities.hpp  cpu_types.hpp  device.hpp  domain.hpp  generic.hpp  network.hpp  secret.hpp  storage.hpp  virtxml.hpp  xmlval.hpp
